crates/ui/tests/snapshots/panel_snapshots__settings_screen__settings_snapshot__debug_tab_active.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: settings_summary(&c)
---
screen: settings
active_tab: Debug
tabs: Risk · Control · Debug
body: debug (latency + market_health + server_time)
